--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.2.0
 blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
@@ -8,12 +9,19 @@ Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+packaging==21.3
+pluggy==1.0.0
 psycopg2-binary==2.8.6
+py==1.11.0
+pyparsing==3.0.6
+pytest==6.2.5
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.18
+toml==0.10.2
 urllib3==1.26.7
 Werkzeug==2.0.1
